# AnalysisTools

./: lichen.cabal
commonAST/: ASTMatcher.cpp  context.py  createAllJson.py  jsonDiff.py  jsonDiffRunnerRunner.py  match.py  parser.cpp  parser.h  parserUnion.cpp  parserUnion.h  refMaps.py  unionTool.cpp  unionToolRunner.py  utils.py
src/Lichen/Architecture/: Config.hs  Error.hs  Language.hs  Lexer.hs  Parser.hs  Rendering.hs  Source.hs  Tool.hs
src/Lichen/Diagnostics/: Config.hs  Main.hs
src/Lichen/Implementation/Languages/: C.hs  Java.hs  Python.hs  Text.hs
src/Lichen/Implementation/Lexers/: C.hs  Java.hs  Python.hs  Text.hs
src/Lichen/Implementation/Parsers/: Python.hs
src/Lichen/Implementation/Sources/: Submitty.hs
src/Lichen/Interface/: Rendering.hs
src/Lichen/Interface/Configs/: Count.hs  Diagnostics.hs  Plagiarism.hs
src/Lichen/Interface/Renderings/: Diagnostics.hs  Plagiarism.hs
src/Lichen/Interface/Renderings/Plagiarism/: Compare.hs  Index.hs
src/Lichen/Interface/Tools/: Count.hs
src/Lichen/Interface/Tools/Count/: Counters.hs
src/Lichen/Interface/Tools/Plagiarism/: Compare.hs  Winnow.hs
src/Lichen/Utility/: Miscellaneous.hs  Parsing.hs  Rendering.hs
