name:                lichen
version:             0.3.4
synopsis:            Tools for plagiarism detection, anonymization of assignment directories, and software analysis.
description:         Please see README.md
homepage:            https://github.com/Submitty/AnalysisTools
author:              Samuel Breese
maintainer:          breess@rpi.edu
copyright:           2016 Samuel Breese
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lichen.Utility.Miscellaneous
                     , Lichen.Utility.Parsing
                     , Lichen.Utility.Rendering

                     , Lichen.Architecture.Error
                     , Lichen.Architecture.Source
                     , Lichen.Architecture.Language
                     , Lichen.Architecture.Lexer
                     , Lichen.Architecture.Parser
                     , Lichen.Architecture.Config
                     , Lichen.Architecture.Tool
                     , Lichen.Architecture.Rendering

                     , Lichen.Implementation.Sources.Submitty
                     , Lichen.Implementation.Languages.Python
                     , Lichen.Implementation.Languages.C
                     , Lichen.Implementation.Languages.Java
                     , Lichen.Implementation.Languages.Text
                     , Lichen.Implementation.Lexers.Python
                     , Lichen.Implementation.Lexers.C
                     , Lichen.Implementation.Lexers.Java
                     , Lichen.Implementation.Lexers.Text
                     , Lichen.Implementation.Parsers.Python

                     , Lichen.Interface.Configs.Count
                     , Lichen.Interface.Configs.Plagiarism
                     , Lichen.Interface.Configs.Diagnostics
                     , Lichen.Interface.Tools.Count
                     , Lichen.Interface.Tools.Count.Counters
                     , Lichen.Interface.Tools.Plagiarism
                     , Lichen.Interface.Tools.Plagiarism.Winnow
                     , Lichen.Interface.Tools.Plagiarism.Compare
                     , Lichen.Interface.Tools.Diagnostics
                     , Lichen.Interface.Renderings.Plagiarism
                     , Lichen.Interface.Renderings.Plagiarism.Index
                     , Lichen.Interface.Renderings.Plagiarism.Compare
                     , Lichen.Interface.Renderings.Diagnostics
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
                     , text
                     , bytestring
                     , mtl
                     , hashable
                     , process
                     , directory
                     , filepath
                     , ansi-terminal
                     , aeson
                     , aeson-pretty
                     , megaparsec
                     , optparse-applicative
                     , language-python
                     , blaze-html
                     , blaze-markup
                     , clay
                     , jmacro
                     , QuickCheck
                     , hspec
  ghc-options:         -O2 -Wall
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

executable plagiarism
  hs-source-dirs:      app/plagiarism
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , lichen
  default-language:    Haskell2010

executable count
  hs-source-dirs:      app/count
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , lichen
  default-language:    Haskell2010

executable diagnostics
  hs-source-dirs:      app/diagnostics
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , lichen
  default-language:    Haskell2010

test-suite lichen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Lichen.Plagiarism.WinnowSpec
  build-depends:       base
                     , lichen
                     , QuickCheck
                     , hspec
                     , megaparsec
  ghc-options:         -fno-warn-orphans
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Submitty/AnalysisTools
